--- a/models/r200/r200.sdf.jinja
+++ b/models/r200/r200.sdf.jinja
@@ -72,8 +72,8 @@
           <alwaysOn>true</alwaysOn>
           <updateRate>1.0</updateRate>
           <cameraName>r200_ir</cameraName>
-          <imageTopicName>/r200/depth/image_raw</imageTopicName>
-          <cameraInfoTopicName>/r200/depth/camera_info</cameraInfoTopicName>
+          <imageTopicName>/camera/rgb/image_rect_color</imageTopicName>
+          <cameraInfoTopicName>/camera/rgb/camera_info</cameraInfoTopicName>
           <depthImageTopicName>/r200/depth/image_raw</depthImageTopicName>
           <depthImageInfoTopicName>/r200/depth/camera_info</depthImageInfoTopicName>
           <pointCloudTopicName>/r200/depth/points</pointCloudTopicName>
