Parameter changes and depth camera topic renaming

--- a/models/r200/r200.sdf.jinja
+++ b/models/r200/r200.sdf.jinja
@@ -74,9 +74,9 @@
           <cameraName>r200_ir</cameraName>
           <imageTopicName>/camera/rgb/image_rect_color</imageTopicName>
           <cameraInfoTopicName>/camera/rgb/camera_info</cameraInfoTopicName>
-          <depthImageTopicName>/r200/depth/image_raw</depthImageTopicName>
-          <depthImageInfoTopicName>/r200/depth/camera_info</depthImageInfoTopicName>
-          <pointCloudTopicName>/r200/depth/points</pointCloudTopicName>
+          <depthImageTopicName>/camera/depth/image_raw</depthImageTopicName>
+          <depthImageInfoTopicName>/camera/depth/camera_info</depthImageInfoTopicName>
+          <pointCloudTopicName>/camera/depth/points</pointCloudTopicName>
           <frameName>r200</frameName>
           <pointCloudCutoff>0.5</pointCloudCutoff>
           <distortionK1>0.00000001</distortionK1>
