--- a/models/r200/r200.sdf.jinja
+++ b/models/r200/r200.sdf.jinja
@@ -38,16 +38,59 @@
         {{ box(l, w, h)|indent(8) }}
       </collision>
 
+      <sensor type='camera' name='rgb_camera'>
+          <camera name='rgb'>
+            <horizontal_fov>0.94359</horizontal_fov>
+            <image>
+              <width>640</width>
+              <height>480</height>
+            </image>
+            <clip>
+              <near>0.1</near>
+              <far>100</far>
+            </clip>
+            <!--distortion>
+              <p1>0.0</p1>
+              <p2>0.0</p2>
+              <k1>0.0</k1>
+              <k2>0.0</k2>
+              <k3>0.0</k3>
+              <center>0.5 0.5</center>
+            </distortion-->
+          </camera>
+          <always_on>1</always_on>
+          <update_rate>30</update_rate>
+          <visualize>1</visualize>
+          <plugin name='camera_plugin' filename='libgazebo_ros_camera.so'>
+              <robotNamespace>/</robotNamespace>
+            <alwaysOn>true</alwaysOn>
+            <imageTopicName>/camera/rgb/image_raw</imageTopicName>
+            <cameraInfoTopicName>/camera/rgb/camera_info</cameraInfoTopicName>
+            <updateRate>30.0</updateRate>
+            <cameraName>camera</cameraName>
+            <frameName>camera</frameName>
+            <CxPrime>328.3178405761719</CxPrime>
+            <Cx>328.3178405761719</Cx>
+            <Cy>264.85052490234375</Cy>
+            <hackBaseline>0</hackBaseline>
+            <focalLength>627.172905</focalLength>
+            <distortionT1>-0.06627094000577927</distortionT1>
+            <distortionT2>0.02716059796512127</distortionT2>
+            <distortionK1>-0.00037734207580797374</distortionK1>
+            <distortionK2>-0.0011735913576558232</distortionK2>
+            <distortionK3>0.0</distortionK3>
+          </plugin>
+        </sensor>
 
       <sensor type="depth" name="r200_sensor">
         <always_on>true</always_on>
         <update_rate>30.0</update_rate>
         <visualize>true</visualize>
         <camera name="head">
-          <horizontal_fov>1.3962634</horizontal_fov>
+          <horizontal_fov>0.965683</horizontal_fov>
           <image>
-            <width>640</width>
-            <height>480</height>
+            <width>480</width>
+            <height>320</height>
             <format>R8G8B8</format>
           </image>
           <depth_camera>
@@ -59,34 +102,33 @@
           </clip>
           <noise>
             <type>gaussian</type>
-            <!-- Noise is sampled independently per pixel on each frame.
-                 That pixel's noise value is added to each of its color
-                 channels, which at that point lie in the range [0,1]. -->
             <mean>0.0</mean>
             <stddev>0.007</stddev>
           </noise>
         </camera>
 
         <plugin name="r200_controller" filename="libgazebo_ros_openni_kinect.so">
+              <robotNamespace>/</robotNamespace>
           <baseline>0.2</baseline>
           <alwaysOn>true</alwaysOn>
           <updateRate>30.0</updateRate>
-          <cameraName>r200_ir</cameraName>
-          <imageTopicName>/camera/rgb/image_rect_color</imageTopicName>
-          <cameraInfoTopicName>/camera/rgb/camera_info</cameraInfoTopicName>
+          <cameraName>camera</cameraName>
+            <imageTopicName>asdasd</imageTopicName>
+            <cameraInfoTopicName>asd</cameraInfoTopicName>
           <depthImageTopicName>/camera/depth/image_raw</depthImageTopicName>
           <depthImageInfoTopicName>/camera/depth/camera_info</depthImageInfoTopicName>
           <pointCloudTopicName>/camera/depth/points</pointCloudTopicName>
-          <frameName>r200</frameName>
+          <frameName>camera</frameName>
           <pointCloudCutoff>0.5</pointCloudCutoff>
           <distortionK1>0.00000001</distortionK1>
           <distortionK2>0.00000001</distortionK2>
           <distortionK3>0.00000001</distortionK3>
           <distortionT1>0.00000001</distortionT1>
           <distortionT2>0.00000001</distortionT2>
-          <CxPrime>0</CxPrime>
-          <Cx>328.32</Cx>
-          <Cy>264.85</Cy>
+          <focalLength>457.816194</focalLength>
+          <CxPrime>249.32264709472656</CxPrime>
+          <Cx>249.32264709472656</Cx>
+          <Cy>179.5</Cy>
           <focalLength>0</focalLength>
           <hackBaseline>0</hackBaseline>
         </plugin>
