Final touches to previous commit

--- a/models/r200/r200.sdf.jinja
+++ b/models/r200/r200.sdf.jinja
@@ -113,8 +113,8 @@
           <alwaysOn>true</alwaysOn>
           <updateRate>30.0</updateRate>
           <cameraName>camera</cameraName>
-            <imageTopicName>asdasd</imageTopicName>
-            <cameraInfoTopicName>asd</cameraInfoTopicName>
+          <imageTopicName>simulated</imageTopicName>
+          <cameraInfoTopicName>simulated_info</cameraInfoTopicName>
           <depthImageTopicName>/camera/depth/image_raw</depthImageTopicName>
           <depthImageInfoTopicName>/camera/depth/camera_info</depthImageInfoTopicName>
           <pointCloudTopicName>/camera/depth/points</pointCloudTopicName>
