--- a/models/r200/r200.sdf.jinja
+++ b/models/r200/r200.sdf.jinja
@@ -68,7 +68,7 @@
             <cameraInfoTopicName>/camera/rgb/camera_info</cameraInfoTopicName>
             <updateRate>30.0</updateRate>
             <cameraName>camera</cameraName>
-            <frameName>camera</frameName>
+            <frameName>camera_rgb_optical_frame</frameName>
             <CxPrime>328.3178405761719</CxPrime>
             <Cx>328.3178405761719</Cx>
             <Cy>264.85052490234375</Cy>
@@ -118,7 +118,7 @@
           <depthImageTopicName>/camera/depth/image_raw</depthImageTopicName>
           <depthImageInfoTopicName>/camera/depth/camera_info</depthImageInfoTopicName>
           <pointCloudTopicName>/camera/depth/points</pointCloudTopicName>
-          <frameName>camera</frameName>
+          <frameName>camera_depth_optical_frame</frameName>
           <pointCloudCutoff>0.5</pointCloudCutoff>
           <distortionK1>0.00000001</distortionK1>
           <distortionK2>0.00000001</distortionK2>
@@ -135,7 +135,6 @@
       </sensor>
     </link>
   </model>
-
 </sdf>
 
 
